[package]
name = "tinypng"
version = "0.1.1"
edition = "2021"
authors = ["wyhaya <wyhaya@gmail.com>"]
description = "Command line tool for compressing images using the TinyPNG API"
homepage = "https://github.com/wyhaya/tinypng"
repository = "https://github.com/wyhaya/tinypng.git"
license = "MIT"
readme = "README.md"
keywords = [
    "TinyPNG",
    "images",
    "compress",
    "command-line-tool"
]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.11.9", features = ["stream"] }
serde = { version = "1.0.136", features = ["derive"] }
clap = "3.1.5"
glob = "0.3.0"
futures-util = "0.3.21"
home-config = "0.2.0"