[package]
name = "tinypng"
version = "0.2.0"
edition = "2021"
authors = ["wyhaya <wyhaya@gmail.com>"]
description = "Command line tool for compressing images using the TinyPNG API"
homepage = "https://github.com/wyhaya/tinypng"
repository = "https://github.com/wyhaya/tinypng.git"
license = "MIT"
readme = "README.md"
keywords = [
    "TinyPNG",
    "images",
    "compress",
    "command-line-tool"
]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.11.10", features = ["stream"] }
serde = { version = "1.0.137", features = ["derive"] }
clap = "3.1.18"
glob = "0.3.0"
futures-util = "0.3.21"
home-config = { version = "0.4.0", features = ["toml"] }